# log-cruncher

./: .gitignore  Cargo.toml  README.md  benchmark.py  generate_data.py  main.py  pyproject.toml  run.py  test_logs.csv  test_logs.jsonl  test_performance.py  tests.py
src/: lib.rs
