[package]
name = "log-cruncher"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "log_cruncher"
crate-type = ["cdylib"]

[dependencies]
csv = "1.4.0"
pyo3 = { version = "0.27.0"}
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
